# agency

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  __init__.py  devserver  feed.xml  index.html  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.github/workflows/: build.yml  deploy_github_page.yml  publish.yml  publish_to_pypi.yml  test.yml  tests.yml
agency/: __init__.py  agent.py  amqp_space.py  logger.py  native_space.py  processor.py  queue.py  resources.py  schema.py  space.py  util.py
agency-js/: README.md  jest.config.js  package.json  tsconfig.json
agency-js/src/: global.d.ts  index.ts
agency-js/tests/: add.test.ts
agency/agents/: chattyai.py  demo_agent.py  openai_completion_agent.py  openai_function_agent.py  prompt_methods.py
agency/operators/: prompt_methods.py
agency/processors/: native_thread_processor.py
agency/spaces/: amqp_space.py  local_space.py  multiprocess_space.py  native_space.py  thread_space.py  web_app.py
agency/util/: logger.py  util.py
api/: agency.html  search.js
api/agency/: agent.html  processor.html  processors.html  schema.html  space.html  spaces.html  util.html
api_docs/: agency.html  index.html  search.js
api_docs/agency/: agent.html  logger.html  processor.html  processors.html  queue.html  schema.html  (+4 more)
articles/: access_control.html  action_metadata.html  agent_callbacks.html  agent_implementation.html  creating_spaces.html  defining_actions.html  messaging.html  messaging_schema.html  responses.html  synchronous_messaging.html  synchronous_requests.html  using_amqpspace.html  walkthrough.html
assets/: main.css
channels/: channel.py  chattylm_channel.py  os_channel.py  web_channel.py
demo/: .env.example  Dockerfile  README.md  demo.py  demo_threaded.py  docker-compose.yml  main.py  pyproject.toml
docs/: CNAME  Gemfile  README.md  _config.yml  index.md  style.css
everything/: operator.py  space.py  util.py
examples/: README.md
examples/demo/: .env.example  Dockerfile  README.md  amqp_chatty.py  amqp_demo_1.py  amqp_demo_2.py  amqp_main.py  amqp_openai.py  amqp_web.py  demo  demo.py  demo_2.py  demo_amqp.py  demo_amqp_1.py  demo_amqp_2.py  demo_local.py  demo_multiprocess.py  demo_native.py  demo_threaded.py  demo_threadspace.py  docker-compose.yml  native_demo.py  pyproject.toml  web_app.py
examples/demo/agents/: chatty_ai.py  chattyai.py  help_methods.py  host.py  openai_completion_agent.py  openai_function_agent.py
examples/demo/agents/mixins/: help_methods.py  prompt_methods.py  say_response_methods.py
examples/demo/apps/: gradio_app.py  react_app.py
examples/demo/templates/: index.html
examples/mqtt/: docker-compose.yml  main.py  pyproject.toml
python_agency/: agent.py  space.py
scripts/: receive_logs_topic.py
site/: .gitignore  Gemfile  README.md  _config.yml  index.md
tests/: conftest.py  helpers.py  test_.py  test_agent.py  test_all.py  test_channel.py  test_e2e.py  test_e2e_help.py  test_e2e_messaging.py  test_e2e_permissions.py  test_operator.py  test_space.py
things/: operator.py  space.py  util.py
unite/: operator.py  space.py
(+131 files in other folders)
